--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,8 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_margin_18dp"
-    android:paddingHorizontal="@dimen/activity_margin_24dp"
     android:id="@+id/root"
     android:background="@android:color/white"
     tools:context=".screens.fragment.LoginFragment">
@@ -16,10 +14,11 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_back"
         android:background="@android:color/transparent"
-        android:paddingVertical="@dimen/activity_margin_10dp"
-        android:paddingRight="@dimen/activity_margin_10dp"
+        android:paddingVertical="@dimen/activity_margin_12dp"
+        android:paddingHorizontal="@dimen/activity_margin_12dp"
+        android:layout_marginLeft="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/activity_margin_16dp"
+        android:layout_marginTop="@dimen/activity_margin_4dp"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/ibBack"/>
 
@@ -28,7 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/ibBack"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="@dimen/activity_margin_24dp">
 
         <TextView
             android:id="@+id/tvUserName"
@@ -47,7 +47,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/layout_title"
         android:layout_marginTop="@dimen/activity_margin_24dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginHorizontal="@dimen/activity_margin_24dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -84,7 +85,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/layout_confirm_email"
         android:layout_marginTop="@dimen/activity_margin_18dp"
-        android:background="@drawable/bubble_background">
+        android:background="@drawable/bubble_background"
+        android:layout_marginHorizontal="@dimen/activity_margin_24dp">
 
         <EditText
             android:layout_width="match_parent"
@@ -130,6 +132,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
     />
 
     <TextView
@@ -144,6 +147,7 @@
         android:textSize="@dimen/text_size_large"
         app:layout_constraintTop_toBottomOf="@+id/layout_input_key"
         android:background="@drawable/warning_background"
+        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
         android:visibility="gone"
     />
 
