--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:paddingTop="@dimen/activity_margin_18dp"
     tools:context=".screens.activity.CollectionActivity">
 
     <ImageButton
@@ -13,12 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/activity_margin_16dp"
+        android:layout_marginTop="@dimen/activity_margin_4dp"
         android:background="@android:color/transparent"
-        android:paddingVertical="@dimen/activity_margin_10dp"
-        android:paddingRight="@dimen/activity_margin_10dp"
-        android:src="@drawable/ic_back"
-        android:paddingHorizontal="@dimen/activity_margin_24dp"/>
+        android:padding="@dimen/activity_margin_12dp"
+        android:layout_marginLeft="@dimen/activity_margin_12dp"
+        android:src="@drawable/ic_back"/>
 
     <TextView
         android:id="@+id/title"
@@ -30,7 +28,7 @@
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/text_size_big"
         android:textStyle="bold"
-        android:paddingHorizontal="@dimen/activity_margin_24dp"/>
+        android:layout_marginLeft="@dimen/activity_margin_24dp"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPagerCollection"
