--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="activity_margin_8dp">8dp</dimen>
     <dimen name="activity_margin_10dp">10dp</dimen>
     <dimen name="activity_margin_12dp">12dp</dimen>
+    <dimen name="activity_margin_14dp">14dp</dimen>
     <dimen name="activity_margin_15dp">15dp</dimen>
     <dimen name="activity_margin_16dp">16dp</dimen>
     <dimen name="activity_margin_18dp">18dp</dimen>
