--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -19,26 +19,43 @@
         android:layout_marginLeft="@dimen/activity_margin_12dp"
         android:src="@drawable/ic_back"/>
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/rlTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnBack"
-        android:layout_alignParentStart="true"
-        android:text="@string/label_Collection"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/text_size_big"
-        android:textStyle="bold"
-        android:layout_marginLeft="@dimen/activity_margin_24dp"/>
+        android:layout_marginLeft="@dimen/activity_margin_24dp"
+        android:layout_marginRight="@dimen/activity_margin_14dp">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="@string/label_Collection"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/text_size_big"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/btnScan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_scan_collection"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:padding="@dimen/activity_margin_10dp"/>
+
+    </RelativeLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPagerCollection"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/activity_margin_12dp"
-        android:paddingHorizontal="@dimen/activity_margin_40dp"
+        android:layout_marginTop="@dimen/activity_margin_8dp"
+        android:paddingHorizontal="@dimen/activity_margin_32dp"
         android:clipToPadding="false"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/rlTitle"
         android:layout_above="@+id/rlButton">
 
     </androidx.viewpager.widget.ViewPager>
@@ -47,17 +64,14 @@
         android:id="@+id/rlButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/activity_margin_36dp"
+        android:layout_marginHorizontal="@dimen/activity_margin_34dp"
         android:layout_marginBottom="@dimen/activity_margin_36dp"
         android:layout_alignParentBottom="true">
 
         <RelativeLayout
             android:id="@+id/rlBtnSaleAndStolen"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/activity_margin_4dp"
-            android:paddingHorizontal="@dimen/activity_margin_4dp"
-            android:visibility="gone">
+            android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvSale"
@@ -65,22 +79,23 @@
                 android:layout_height="wrap_content"
                 android:elevation="10dp"
                 app:cardCornerRadius="6dp"
+                android:layout_margin="@dimen/activity_margin_4dp"
                 android:layout_alignParentEnd="true">
 
                 <TextView
                     android:id="@+id/btnItemSale"
-                    android:layout_width="145dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/drawable_btn_green_gradient_selector"
                     android:text="@string/label_button_sell"
                     android:textColor="@color/colorWhite"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:textSize="@dimen/text_size_xlarge"
+                    android:textSize="@dimen/text_size_large"
                     android:paddingHorizontal="@dimen/activity_margin_20dp"
                     android:paddingVertical="@dimen/activity_margin_14dp"
                     android:drawableLeft="@drawable/ic_sale"
-                    android:drawableTint="@android:color/white"/>
+                    android:drawableTint="@android:color/white" />
 
             </androidx.cardview.widget.CardView>
 
@@ -90,18 +105,19 @@
                 android:layout_height="wrap_content"
                 android:elevation="10dp"
                 app:cardCornerRadius="6dp"
+                android:layout_margin="@dimen/activity_margin_4dp"
                 android:layout_alignParentStart="true">
 
                 <TextView
                     android:id="@+id/btnItemStolen"
-                    android:layout_width="145dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/drawable_btn_red_gradient_selector"
                     android:text="@string/label_button_stolen"
                     android:textColor="@color/colorWhite"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:textSize="@dimen/text_size_xlarge"
+                    android:textSize="@dimen/text_size_large"
                     android:paddingHorizontal="@dimen/activity_margin_28dp"
                     android:paddingVertical="@dimen/activity_margin_14dp"
                     android:drawableLeft="@drawable/ic_stolen"
