--- a/app/src/main/res/layout/fragment_create_new.xml
+++ b/app/src/main/res/layout/fragment_create_new.xml
@@ -34,14 +34,27 @@
         app:layout_constraintTop_toBottomOf="@+id/ibBack"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <TextView
+        android:id="@+id/tvTutorial"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_create_with_phone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/text_size_default"
+        android:layout_marginTop="@dimen/activity_margin_12dp"/>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvTutorial"
+        android:layout_marginTop="@dimen/activity_margin_16dp"
         android:layout_marginHorizontal="@dimen/activity_margin_24dp"
         android:id="@+id/linearLayout">
 
@@ -66,22 +79,30 @@
             android:background="@drawable/bubble_background"
             android:paddingHorizontal="@dimen/activity_margin_16dp"
             android:layout_marginBottom="@dimen/activity_margin_16dp"
-            android:paddingVertical="@dimen/activity_margin_4dp"
+            android:paddingVertical="6dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_phone"/>
 
             <com.hbb20.CountryCodePicker
                 android:id="@+id/pickerCountryCode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:ccp_defaultNameCode="VN"/>
+                app:ccp_defaultNameCode="VN"
+                app:ccp_textSize="@dimen/text_size_large"
+                app:ccp_showFlag="false"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="numberDecimal"
-                android:textSize="@dimen/text_size_xxlarge"
+                android:textSize="@dimen/text_size_large"
                 android:id="@+id/etUserPhone"
+                android:hint="@string/hint_phone"
                 android:background="@android:color/transparent"
                 android:maxLength="10"/>
 
@@ -96,7 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberPassword"
-                android:textSize="@dimen/text_size_xxlarge"
+                android:textSize="@dimen/text_size_large"
                 android:maxLength="6"
                 android:hint="@string/text_holder_user_password"
                 android:id="@+id/etUserPassword"
