--- a/app/src/main/res/layout/fragment_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_verify_phone.xml
@@ -20,7 +20,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/activity_margin_4dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/ibBack"/>
+        android:id="@+id/ibBack"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/title"
@@ -34,14 +35,27 @@
         app:layout_constraintTop_toBottomOf="@+id/ibBack"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <TextView
+        android:id="@+id/tvTutorial"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_verify_otp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/text_size_default"
+        android:layout_marginTop="@dimen/activity_margin_12dp"/>
+
     <FrameLayout
         android:id="@+id/flInputCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvTutorial"
+        android:layout_marginTop="@dimen/activity_margin_24dp"
         android:layout_marginHorizontal="@dimen/activity_margin_24dp">
 
         <LinearLayout
@@ -145,17 +159,35 @@
 
     </FrameLayout>
 
-    <TextView
-        android:id="@+id/tvResendCode"
+    <LinearLayout
+        android:id="@+id/llResendCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/flInputCode"
-        android:text="@string/label_button_resend_code"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/colorDarkTurquoise"
-        android:layout_marginTop="@dimen/activity_margin_8dp"
-        android:textSize="@dimen/text_size_large"/>
+        app:layout_constraintTop_toBottomOf="@+id/flInputCode"
+        android:layout_marginTop="@dimen/activity_margin_20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_didnt_receive_code"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_large"/>
+
+        <TextView
+            android:id="@+id/tvResend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_button_resend_code"
+            android:textColor="@color/colorPutty"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold"
+            android:paddingVertical="@dimen/activity_margin_4dp"
+            android:paddingLeft="@dimen/activity_margin_4dp"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/btnVerify"
@@ -180,13 +212,13 @@
         android:id="@+id/tvWarning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text_message_incorrect_password"
+        android:text="@string/text_message_incorrect_code"
         android:layout_marginTop="@dimen/activity_margin_24dp"
         android:padding="@dimen/activity_margin_12dp"
         android:textColor="@color/colorOrangish"
         android:lineSpacingExtra="4dp"
         android:textSize="@dimen/text_size_large"
-        app:layout_constraintTop_toBottomOf="@+id/tvResendCode"
+        app:layout_constraintTop_toBottomOf="@+id/llResendCode"
         android:background="@drawable/warning_background"
         android:layout_marginHorizontal="@dimen/activity_margin_24dp"
         android:visibility="gone" />
