add verify phone number with firebase

--- a/app/src/main/res/layout/fragment_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_verify_phone.xml
@@ -190,7 +190,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/btnVerify"
+        android:id="@+id/tvVerify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable_btn_green_gradient_selector"
