--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -47,7 +47,7 @@
             android:id="@+id/tvUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome Sneakerhead"
+            android:text="@string/text_user_name_non_login"
             android:textStyle="bold"
             android:textSize="@dimen/text_size_xlarge"
             android:textColor="@color/colorOffWhite"
