--- a/app/src/main/res/layout/fragment_update_user_register.xml
+++ b/app/src/main/res/layout/fragment_update_user_register.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/root"
-    android:background="@android:color/white"
-    tools:context=".screens.fragment.LoginFragment">
+    android:background="@android:color/white">
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -20,13 +18,14 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/activity_margin_4dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/ibBack"/>
+        android:id="@+id/ibBack"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/label_log_in"
+        android:text="@string/label_update_info"
         android:textSize="@dimen/text_size_big"
         android:textColor="@color/colorBlack"
         android:textStyle="bold"
@@ -45,82 +44,56 @@
         android:layout_marginHorizontal="@dimen/activity_margin_24dp"
         android:id="@+id/linearLayout">
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/etUserName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bubble_background"
-            android:paddingHorizontal="@dimen/activity_margin_16dp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/activity_margin_16dp"
-            android:paddingVertical="6dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:background="@drawable/bubble_background"
+            android:drawableLeft="@drawable/ic_user"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:hint="@string/text_holder_user_name"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="@dimen/activity_margin_16dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+            android:textSize="@dimen/text_size_large"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_phone"/>
-
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/pickerCountryCode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:ccp_defaultNameCode="VN"
-                app:ccp_textSize="@dimen/text_size_large"
-                app:ccp_showFlag="false"/>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="numberDecimal"
-                android:textSize="@dimen/text_size_large"
-                android:id="@+id/etUserPhone"
-                android:hint="@string/hint_phone"
-                android:background="@android:color/transparent"
-                android:maxLength="9"/>
-
-        </LinearLayout>
-
-        <RelativeLayout
+        <EditText
+            android:id="@+id/etUserAddress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bubble_background">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/activity_margin_16dp"
+            android:background="@drawable/bubble_background"
+            android:drawableLeft="@drawable/ic_user"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:hint="@string/text_holder_user_address"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="@dimen/activity_margin_16dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+            android:textSize="@dimen/text_size_large"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberPassword"
-                android:textSize="@dimen/text_size_large"
-                android:maxLength="6"
-                android:hint="@string/text_holder_user_password"
-                android:id="@+id/etUserPassword"
-                android:drawableLeft="@drawable/ic_password"
-                android:drawablePadding="@dimen/activity_margin_12dp"
-                android:paddingVertical="@dimen/activity_margin_12dp"
-                android:paddingHorizontal="@dimen/activity_margin_16dp"
-                android:background="@android:color/transparent"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/btnShowPassword"/>
-
-            <ImageView
-                android:id="@+id/btnShowPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_show_password"
-                android:paddingHorizontal="@dimen/activity_margin_16dp"
-                android:paddingVertical="@dimen/activity_margin_12dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"/>
-
-        </RelativeLayout>
+        <EditText
+            android:id="@+id/etUserEmail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/activity_margin_16dp"
+            android:background="@drawable/bubble_background"
+            android:drawableLeft="@drawable/ic_email"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:hint="@string/text_holder_user_email"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="@dimen/activity_margin_16dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+            android:textSize="@dimen/text_size_large"/>
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable_btn_green_gradient_selector"
-        android:text="@string/label_button_login"
+        android:text="@string/label_button_update"
         android:layout_marginBottom="@dimen/activity_margin_24dp"
         android:textColor="@color/colorWhite"
         android:enabled="false"
@@ -132,7 +105,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="@dimen/activity_margin_24dp"
-    />
+        />
 
     <TextView
         android:id="@+id/tvWarning"
@@ -148,7 +121,7 @@
         android:background="@drawable/warning_background"
         android:layout_marginHorizontal="@dimen/activity_margin_24dp"
         android:visibility="gone"
-    />
+        />
 
     <include
         android:id="@+id/pb_loading"
