create ui for manage credit card screen

--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/ivQrAddress"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/qr_code"
+                android:src="@color/colorPutty"
                 android:layout_centerInParent="true"/>
 
         </androidx.cardview.widget.CardView>
