--- a/app/src/main/res/layout/activity_manage_card.xml
+++ b/app/src/main/res/layout/activity_manage_card.xml
@@ -154,7 +154,8 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -170,8 +171,9 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/activity_margin_8dp"
+                    android:layout_marginTop="@dimen/activity_margin_8dp"
                     android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+                    android:layout_marginBottom="@dimen/activity_margin_24dp"
                     app:cardCornerRadius="@dimen/activity_margin_8dp"
                     app:cardElevation="3dp">
 
