--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
     <color name="black_with_alpha_10">#1A000000</color>
     <color name="greyishBrown">#4a4a4a</color>
     <color name="scarlet">#d0021b</color>
+    <color name="gray_f4f4f4">#f4f4f4</color>
 
 </resources>
