--- a/app/src/main/res/layout/include_bottom_view_scan.xml
+++ b/app/src/main/res/layout/include_bottom_view_scan.xml
@@ -266,7 +266,7 @@
 
                     <TextView
                         android:id="@+id/tvItemOwner"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/text_size_xlarge"
@@ -346,7 +346,9 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/ivError"
+                android:layout_marginRight="@dimen/activity_margin_16dp">
 
                 <TextView
                     android:id="@+id/tvScanFailTitle"
@@ -369,6 +371,7 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/ivError"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_scan_fail"
