--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -166,7 +166,8 @@
         android:gravity="center_horizontal"
         android:background="@android:color/white"
         android:paddingHorizontal="@dimen/activity_margin_16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <View
             android:layout_width="match_parent"
