--- a/app/src/main/res/layout/fragment_create_new.xml
+++ b/app/src/main/res/layout/fragment_create_new.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_back"
         android:background="@android:color/transparent"
-        android:paddingVertical="@dimen/activity_margin_12dp"
-        android:paddingHorizontal="@dimen/activity_margin_12dp"
+        android:padding="@dimen/activity_margin_12dp"
         android:layout_marginLeft="@dimen/activity_margin_12dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/activity_margin_4dp"
