--- a/app/src/main/res/layout/activity_manage_card.xml
+++ b/app/src/main/res/layout/activity_manage_card.xml
@@ -12,8 +12,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_back"
         android:background="@android:color/transparent"
-        android:paddingVertical="@dimen/activity_margin_12dp"
-        android:paddingHorizontal="@dimen/activity_margin_12dp"
+        android:padding="@dimen/activity_margin_12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="@dimen/activity_margin_4dp"
         android:id="@+id/ibBack"/>
